--- a/abc_comprehensivecba_appendix-pub.tex
+++ b/abc_comprehensivecba_appendix-pub.tex
@@ -10,7 +10,7 @@
 \renewcommand\theassumption{AA--\arabic{assumption}}
 
 \begin{document}
-\title{\Large \textbf{Web Appendix: \\ Quantifying the Life-cycle Benefits \\ of a Prototypical Early Childhood Program}\thanks{Garc\'{i}a: The University of Chicago, Department of Economics. 5740 S Woodlawn Av. Chicago, IL. email: jorgelgarcia@uchicago.edu. Heckman: American Bar Foundation and The University of Chicago, Department of Economics. 1126 East 59th Street Chicago, IL. email: jjh@uchicago.edu. Leaf: Leonard D. Schaeffer Center for Health Policy and Economics, University of Southern California. 635 Downey Way, Los Angeles, CA 90089. email: dleaf@healthpolicy.usc.edu. Prados: Dornsife Center for Economic and Social Research, University of Southern California. 635 Downey Way, Los Angeles, CA 90089. email: prados@usc.edu. This research was supported in part by: the Buffett Early Childhood Fund; the Pritzker Children's Initiative; the Robert Wood Johnson Foundation's Policies for Action program; the Leonard D. Schaeffer Center for Health Policy and Economics; NIH grants NICHD R37HD065072, NICHD R01HD054702, NIA R24AG048081, and NIA P30AG024968; Successful Pathways from School to Work, an initiative of the University of Chicago's Committee on Education and funded by the Hymen Milgrom Supporting Organization; the Human Capital and Economic Opportunity Global Working Group, an initiative of the Center for the Economics of Human Development and funded by the Institute for New Economic Thinking; and the American Bar Foundation. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. The authors wish to thank Frances Campbell, Craig and Sharon Ramey, Margaret Burchinal, Carrie Bynum, and the staff of the Frank Porter Graham Child Development Institute at the University of North Carolina Chapel Hill for the use of data and source materials from the Carolina Abecedarian Project and the Carolina Approach to Responsive Education. Years of partnership and collaboration have made this work possible. Collaboration with Andr\'{e}s Hojman, Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, Joshua Shea, Jake Torcasso, and Anna Ziff on related work has strengthened the analysis in this paper. Collaboration with Bryan Tysinger of the Leonard D. Schaeffer Center for Health Policy and Economics at the University of Southern California on adapting the Future America Model is gratefully acknowledged. For helpful comments on various versions of the paper, we thank St\'{e}phane Bonhomme, Fl\'{a}vio Cunha, Steven Durlauf, David Figlio, Dana Goldman, Ganesh Karapakula, Sidharth Moktan, Tanya Rajan, Azeem Shaikh, Jeffrey Smith, Chris Taber, Matthew Tauzer, Ed Vytlacil, Jim Walker, and Matt Wiswall. We benefited from helpful comments received at the Leonard D. Schaeffer Center for Health Policy and Economics in December, 2016, and at the University of Wisconsin, February, 2017. For information on the implementation of the Carolina Abecedarian Project and the Carolina Approach to Responsive Education and assistance in data acquisition, we thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The set of codes to replicate the computations in this paper are posted in a repository. Interested parties can request to download all the files. The address of the repository is \url{https://github.com/jorgelgarcia/abccare-cba}. To replicate the results in this paper, contact any of the authors, who will put you in contact with the appropriate individuals to obtain access to restricted data.}}
+\title{\Large \textbf{Web Appendix: \\ Quantifying the Life-cycle Benefits \\ of a Prototypical Early Childhood Program}}
 
 \author{Jorge Luis Garc\'{i}a, James J. Heckman, Duncan Ermini Leaf, \\ and Mar\'{i}a Jos\'{e} Prados}
 \date{\today}
@@ -56,22 +56,9 @@
 \setcounter{table}{0}   \renewcommand{\thetable}{F.\arabic{table}}
 \input{Appendices/Health}
 
-\setcounter{figure}{0}  \renewcommand{\thefigure}{G.\arabic{figure}}
-\setcounter{table}{0}   \renewcommand{\thetable}{G.\arabic{table}}
-\input{Appendices/Results}
-
-\setcounter{figure}{0}  \renewcommand{\thefigure}{H.\arabic{figure}}
-\setcounter{table}{0}   \renewcommand{\thetable}{H.\arabic{table}}
-\input{Appendices/VSensitivity}
-
 \setcounter{figure}{0}  \renewcommand{\thefigure}{I.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{I.\arabic{table}}
 \input{Appendices/Sensitivity}
-
-\setcounter{figure}{0}  \renewcommand{\thefigure}{J.\arabic{figure}}
-\setcounter{table}{0}   \renewcommand{\thetable}{J.\arabic{table}}
-%\input{Appendices/Estimates}
-
 
 \end{appendices}
 
